# yoghurt

./: .gitignore  .gitmodules  CMakeLists.txt  readme.txt
include/yoghurt/: yoghurt.h
modules/core/: CMakeLists.txt  core.c
server/: CMakeLists.txt  main.c
server/mod/: module.c  module.h
tests/: CMakeLists.txt  test_main.c
